# python-project-template

./: .envrc  .gitignore  PROJECT_NAME.code-workspace  README.md  constraints.txt  environment.yml  manifest  pyproject.toml  pyrightconfig.json  requirements.txt  setup.cfg  setup.py
PROJECT_NAME/: main.py
docs/: project_structure.md  tools.md
scripts/: create_env.sh  env_check.sh
